# testing_exercises

./: .coverage  .coveragerc  .editorconfig  .gitignore  cov.xml  coverage.code-workspace  pyproject.toml
functions/level_1/: five_title.py
tests/level_1/: test_five_title.py  test_four_bank_parser.py  test_one_gender.py  test_three_url_builder.py  test_two_date_parser.py
tests/level_2/: test_five_replace_word.py  test_four_sentiment.py  test_one_pr_url.py  test_three_first.py  test_two_square_equation.py
tests/level_3/: test_four_fraud.py  test_one_avg_daily_expenses.py  test_three_is_subscription.py  test_two_expense_categotizer.py
